Second attempt at set up with trial tests and solutions not passing

--- a/WebDevExample/package.json
+++ b/WebDevExample/package.json
@@ -1,17 +1,19 @@
 {
-    "name": "tdd-guessing-game",
-    "version": "1.0.0",
-    "description": "A TDD learning exercise",
-    "main": "game.js",
-    "scripts": {
-      "test": "jest --watchAll",
-      "test:coverage": "jest --coverage"
-    },
-    "devDependencies": {
-      "jest": "^27.0.6",
-      "jsdom": "^16.6.0"
-    },
-    "jest": {
-      "testEnvironment": "jsdom"
-    }
+  "name": "tdd-guessing-game",
+  "version": "1.0.0",
+  "description": "A TDD learning exercise",
+  "main": "game.js",
+  "type": "module",
+  "scripts": {
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {}
   }
+}
